<?xml version="1.0"?>
<package format="2">
  <name>autonomus_differential_wheel</name>
  <version>1.0.0</version>
  <description>The autonomus_differential_wheel package</description>

  <maintainer email="none@example.com">Vellons</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export></export>
</package>
